--- a/src/components/Chat/ChatList/ChatList.css
+++ b/src/components/Chat/ChatList/ChatList.css
@@ -6,8 +6,9 @@
   padding: 1% 0% 0% 2%;
   border-radius: 1%;
   margin: 5px;
-  min-width: 200px;
+  min-width: 250px;
   letter-spacing: 2px;
+  height: 100%;
 }
 .chatlist__heading {
   display: flex;
@@ -122,12 +123,12 @@
   font-size: 12px;
   display: block;
 }
-.chatlist__item:hover,
+/* .chatlist__item:hover,
 .chatlist__item.active {
   background: #4258f1;
   color: #fff;
   border-radius: 10px;
-}
+} */
 .isOnline {
   position: absolute;
   width: 10px;
@@ -149,7 +150,7 @@
   height: 100%;
 }
 .btn {
-  background-color: #1428A0; /* Blue theme background color */
+  /* background-color: #3b82f6; Blue theme background color */
   color: white; /* Text color */
   padding: 10px 20px; /* Padding for the button */
   border: none; /* Remove default border */
