--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -2,7 +2,7 @@
     border-top-left-radius: 10px; /* Adjust the value as needed */
     border-top-right-radius: 10px; /* Adjust the value as needed */
     /* Other styles */
-    background-color: #1428A0; /* Example background color */
+    background-color: #3b82f6; /* Example background color */
     padding: 20px; /* Example padding */
     color: white; /* Example text color */
     letter-spacing: 3px;
